# ButtonGame

./: CMakeLists.txt  README.md  main.cpp
include/: common.h  errors.h  password_generator.h
include/games/: buttons_game.h
include/games/impl/: buttons_game_impl.h
include/hardware/: light_controller.h
src/: buttons_game.cpp  light_contoller.cpp  password_generator.cpp
tests/: main.cpp  test_main.cpp
